--- a/cms/templates/common/bottomnav/index.html
+++ b/cms/templates/common/bottomnav/index.html
@@ -1,15 +1,17 @@
 <head>
-  <link href="./assets/css/bottom-side-nav.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="./assets/css/bottom-nav.css">
+  <link href="./assets/css/bottom-side-nav.css" rel="stylesheet" type="text/css">
   <script src="./assets/js/bottom-side-nav.js" defer></script>
-  <link>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <!-- <h1>Hello</h1> -->
-  <div id="blur"></div>
-  <div class="sidenav"></div>
+  <h1>Hello</h1>
   <div class="navbar">
+    <div class="total">
+      <div class="sidenav"></div>
+      <div id="content"></div>
+    </div>
     <nav class="menu-navigation-icons">
       <a href="#" class="zoom"><span>Dalal Street</span></a>
       <a href="#" class="zoom"><span>Beer Factory</span></a>
