fixes:bottom nav
Signed-off-by: nishihere19 <nishihere19@gmail.com>

--- a/cms/templates/common/bottomnav/assets/css/bottom-side-nav.css
+++ b/cms/templates/common/bottomnav/assets/css/bottom-side-nav.css
@@ -13,12 +13,12 @@
   flex-direction: column;
   width: 360px; /* 0 width - change this with JavaScript */
   height: 120px;
-  /* position: fixed; /* Stay in place */ */
+  /* position: fixed; /* Stay in place */ 
   bottom: 0; /* Stay at the top */
   left: 0;
   justify-content: space-evenly;
   background-color: #151515; /* Black*/
-  /* overflow: hidden; /* Disable horizontal scroll */ */
+  /* overflow: hidden; /* Disable horizontal scroll */ 
   /* align-items: center; */
   /* transform: translateX(0); */
   transition: all .2s ease-in;
@@ -98,7 +98,8 @@ body {
 .total {
   z-index: 1;
   position: relative;
-  display: inline-block;
+  display: flex;
+  align-items: end;
   /* transform: translateX(0); */
   transition: all .2s ease-in;
 }
@@ -134,7 +135,11 @@ body {
     height: calc(100vh - 120px);
   }
   .sidenav {
-    width: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 14.9vw;
+    height: 5.6vh !important;
   }
   .total.sidenav-open .sidenav {
     width: 360px;
