--- a/cms/templates/common/bottomnav/assets/css/bottom-nav.css
+++ b/cms/templates/common/bottomnav/assets/css/bottom-nav.css
@@ -31,26 +31,32 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
-  background: rgba(175, 177, 192, 0.36);
-  backdrop-filter: blur(64px);
+  z-index: 100 !important;
+  align-items: end;
 }
+
+.menu-navigation-icons::-webkit-scrollbar {
+    display: none;
+  }
 .menu-navigation-icons a {
   opacity: 0.92;
   text-decoration: none;
+  
 }
 
 .menu-navigation-icons a span {
   position: relative;
-  top: 64px;
+  top: 3.5vh;
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 27px;
   text-transform: capitalize;
-
+  padding: 1rem;
   color: #ffffff;
 }
+
 
 /* Make this page responsive */
 
@@ -73,22 +79,27 @@ body {
   color: #ffffff;
 }
 
-.zoom {
+.menu-item {
+  display: flex;
   transition: transform 0.2s; /* Animation */
-  height: 120px;
-  width: 220px;
+  height: 8.4vh;
+  width:100%;
   margin: 0 auto;
+  background: rgba(175, 177, 192, 0.36);
+  backdrop-filter: blur(64px);
 }
 
-.zoom:hover .sidenav {
+.zoom .sidenav {
   width: 300;
 }
 
-.zoom:hover {
-  transform: scale(
+.zoom {
+  /* transform: scale(
     1.48
-  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  z-index: 100 !important;
+  );  */
+  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  height: 14.5vh;
+  width: 22vw;
   background: #090909;
   backdrop-filter: blur(64px);
   background: linear-gradient(
@@ -96,6 +107,43 @@ body {
       rgba(0, 0, 0, 0.39) -4.09%,
       rgba(0, 0, 0, 0) 68.85%
     ),
-    url("./608197a36b99b8a252e1ec411f38c194.jpeg") no-repeat;
+    url(../images/608197a36b99b8a252e1ec411f38c194.jpeg) no-repeat;
   background-size: cover;
+  opacity: 1 !important;
 }
+
+.zoom span{
+  top:6vh !important;
+  font-size: 20.4px !important;
+  font-weight: bold !important;
+}
+
+@media (max-width: 780px) {
+  .menu-navigation-icons, .sidenav{
+    height: 9.3vh !important;
+    /* width: 17.7vw !important; */
+  }
+  .menu-item{
+    height: 9.3vh;
+  }
+  .menu-navigation-icons{
+    margin-left:14.8vw !important;
+    justify-content: flex-start;
+    width: auto !important;
+   
+  }
+  .menu-navigation-icons a span{
+    font-size: 14px !important;
+    line-height: 21px;
+    padding: .4rem !important;
+  }
+  .zoom{
+    width: 35vw !important;
+    height: 9.3vh !important;
+  }
+  .zoom span{
+    top: 3.5vh !important;
+    font-weight: bold !important;
+  }
+}
+
