--- a/cms/templates/common/bottomnav/index.html
+++ b/cms/templates/common/bottomnav/index.html
@@ -14,10 +14,12 @@
     </div>
     <nav class="menu-navigation-icons">
       <a href="#" class="zoom"><span>Dalal Street</span></a>
-      <a href="#" class="zoom"><span>Beer Factory</span></a>
-      <a href="#" class="zoom"><span>The Ultimate Manager</span></a>
-      <a href="#" class="zoom"><span>PPL</span></a>
-      <a href="#" class="zoom"><span>Marketing Hub</span></a>
+      <div class="menu-item">
+      <a href="#" ><span>Beer Factory</span></a>
+      <a href="#" ><span>The Ultimate Manager</span></a>
+      <a href="#" ><span>PPL</span></a>
+      <a href="#" ><span>Marketing Hub</span></a>
+    </div>
     </nav>
   </div>
 
