--- a/p22event/assets/css/main.css
+++ b/p22event/assets/css/main.css
@@ -9,7 +9,7 @@
 .details-wrapper{
     width: 100%;
     min-height: 100vh;
-    background: url(../images/dalal.jpeg); 
+    /* background: url(../images/dalal.jpeg);  */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
