--- a/common/bottomnav/assets/css/bottom-nav.css
+++ b/common/bottomnav/assets/css/bottom-nav.css
@@ -29,15 +29,25 @@
 	text-align: center;
 	position: relative;
 	border-top: 2px solid #ffffff;
+	display: -webkit-flexbox;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
 }
 
 /*Hack to vertically center text*/
 .menu-items > a > span {
 	margin: 0;
-	position: absolute;
+	/* position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%); */
 
 	/* text style */
 
@@ -63,4 +73,50 @@
 	font-size: 21.4016px;
 	line-height: 30px;
 	text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+	.navbar {
+		max-width: 100vw;
+		overflow-x: scroll;
+	}
+
+	.menu-items {
+		width: 300%;
+		height: 12vh;
+	}
+	/* .menu-wrapper {
+		width: 200%;
+	} */
+
+	.menu-items a.zoom {
+		background: rgba(255, 255, 255, 0.68);
+	}
+	.menu-items a {
+		width: 40vw;
+		height: 100% !important;
+		border: none;
+
+		font-style: normal;
+		font-weight: normal !important;
+		font-size: 18px;
+		line-height: 27px;
+		background: rgba(255, 255, 255, 0.41);
+		backdrop-filter: blur(40px);
+	}
+	.menu-items > a span {
+		font-style: normal;
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 21px;
+	}
+
+	.menu-items > a.zoom > span {
+		font-weight: bold;
+		color: #000;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 21px;
+	}
 }
