--- a/common/bottomnav/assets/css/bottom-nav.css
+++ b/common/bottomnav/assets/css/bottom-nav.css
@@ -2,19 +2,19 @@
 
 .navbar {
 	backdrop-filter: blur(2px);
-	position: absolute;
+	position: fixed;
 	/* float: left; */
-	bottom: -2px;
+	bottom: 0px;
 	/* clear: both; */
 	left: 0px;
-	right: 0;
+	/* right: 0; */
 	display: flex;
 }
 
 .menu-items {
 	text-align: center;
 	display: flex;
-	width: 100%;
+	width: 80vw;
 	justify-content: space-around;
 	z-index: 100 !important;
 	align-items: end;
@@ -78,11 +78,10 @@
 @media only screen and (max-width: 600px) {
 	.navbar {
 		max-width: 100vw;
-		overflow-x: scroll;
+		overflow-x: visible;
 	}
 
 	.menu-items {
-		width: 300%;
 		height: 12vh;
 	}
 	/* .menu-wrapper {
@@ -93,10 +92,10 @@
 		background: rgba(255, 255, 255, 0.68);
 	}
 	.menu-items a {
-		width: 40vw;
 		height: 100% !important;
 		border: none;
-
+		padding: 1em;
+		min-width: 40vw;
 		font-style: normal;
 		font-weight: normal !important;
 		font-size: 18px;
@@ -113,7 +112,6 @@
 
 	.menu-items > a.zoom > span {
 		font-weight: bold;
-		color: #000;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 14px;
