--- a/common/bottomnav/assets/css/bottom-side-nav.css
+++ b/common/bottomnav/assets/css/bottom-side-nav.css
@@ -9,8 +9,9 @@
 
 .sidenav {
 	display: flex;
+	width: 20vw;
 	flex-direction: column;
-	width: 15vw; /* 0 width - change this with JavaScript */
+	/* width: 18vw; 0 width - change this with JavaScript */
 	height: 120px;
 	/* position: fixed; /* Stay in place */
 	bottom: 0; /* Stay at the top */
@@ -36,7 +37,7 @@
 }
 
 .sidenav #hello {
-	padding: 0 30px 0 20px;
+	padding: 0 30px 0 40px;
 	text-decoration: none;
 	font-size: 25px;
 	font-weight: 600;
@@ -111,6 +112,11 @@ body {
 		align-items: center;
 	}
 
+	#content a {
+		padding: 0;
+		margin: 2.5rem auto;
+	}
+
 	#dropup-button {
 		transform: rotate(-90deg);
 	}
@@ -137,7 +143,9 @@ body {
 		z-index: -1;
 	}
 	#content {
-		height: calc(100vh - 120px);
+		height: fit-content;
+		bottom: 100%;
+		position: absolute;
 	}
 	.sidenav {
 		/* position: absolute;
@@ -145,7 +153,7 @@ body {
     left: 0;
     height: 5.6vh !important; */
 		width: 25vw;
-		height: 6vh;
+		height: 100%;
 	}
 	.total.sidenav-open .sidenav {
 		width: 360px;
