thumbnail image fix

--- a/p22event/assets/css/main.css
+++ b/p22event/assets/css/main.css
@@ -51,6 +51,10 @@ body {
 	line-height: 95%;
 }
 
+.zoom {
+	background-size: cover !important;
+}
+
 .details-heading-end {
 	font-family: Poppins;
 	font-style: normal;
