--- a/p22login/assets/css/main.css
+++ b/p22login/assets/css/main.css
@@ -1,459 +1,541 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-  box-sizing: border-box;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Poppins";
+}
+
+* {
+	box-sizing: border-box;
 }
 
 @-moz-document url-prefix() {
-  /* Disable scrollbar Firefox */
-  html {
-    scrollbar-width: none;
-  }
+	/* Disable scrollbar Firefox */
+	html {
+		scrollbar-width: none;
+	}
 }
 
 @font-face {
-  font-family: "GothamBold";
-  src: url(../fonts/Gotham-Bold.otf) format("truetype");
+	font-family: "GothamBold";
+	src: url(../fonts/Gotham-Bold.otf) format("truetype");
 }
 
 @font-face {
-  font-family: "GothamLight";
-  src: url(../fonts/Gotham-Light.otf) format("truetype");
+	font-family: "GothamLight";
+	src: url(../fonts/Gotham-Light.otf) format("truetype");
 }
 
 @font-face {
-  font-family: "din";
-  src: url(../fonts/DIN\ Next\ W1G-font.otf) format("truetype");
+	font-family: "din";
+	src: url(../fonts/DIN\ Next\ W1G-font.otf) format("truetype");
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100%;
-  color: #fff;
-  scrollbar-width: none;
-  overflow: auto;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	width: 100%;
+	color: #fff;
+	scrollbar-width: none;
+	overflow: auto;
 }
 
 html {
-  /* background: url(../images/bg.jpg) #000;
+	/* background: url(../images/bg.jpg) #000;
   /* fallback */
-  background: url(../images/Registration.png) no-repeat;
-  background-size: cover;
+	background: url(../images/Registration.png) no-repeat;
+	background-size: cover;
 }
 
 fieldset {
-  border: 0;
-  height: 300px;
-  overflow: auto;
-  padding: 8px;
-  margin-top: 10px;
+	border: 0;
+	height: 300px;
+	overflow: auto;
+	padding: 8px;
+	margin-top: 10px;
 }
 
 fieldset legend {
-  text-align: center;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 18px;
-  /* or 37% */
-  align-items: center;
-  text-align: center;
+	text-align: center;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 48px;
+	line-height: 18px;
+	/* or 37% */
+	align-items: center;
+	text-align: center;
 
-  color: #4f8cff;
+	color: #4f8cff;
 }
 
 fieldset legend img {
-  display: none;
+	display: none;
 }
 
 fieldset ol li {
-  padding-bottom: 5px;
+	padding-bottom: 5px;
 }
 
 fieldset ol li a {
-  color: #fff;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: "GothamLight";
+	color: #fff;
+	text-decoration: none;
+	cursor: pointer;
+	font-family: "GothamLight";
 }
 
 #title {
-  display: flex;
-  justify-content: center;
-  text-transform: uppercase;
-  font-size: 2.9em;
-  margin-top: 7vh;
-  height: 14vh;
-  text-align: center;
-  font-family: "GothamBold";
+	display: flex;
+	justify-content: center;
+	text-transform: uppercase;
+	font-size: 2.9em;
+	margin-top: 7vh;
+	height: 14vh;
+	text-align: center;
+	font-family: "GothamBold";
 }
 
 #main_div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 80vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	height: 80vh;
 }
 
 #left_div {
-  display: flex;
-  justify-content: center;
-  width: 48vw;
-  /* height: 100vh; */
-  /* position: relative; */
-  /* border: 2px solid #000; */
+	display: flex;
+	justify-content: center;
+	width: 48vw;
+	/* height: 100vh; */
+	/* position: relative; */
+	/* border: 2px solid #000; */
 }
 
 #logo {
-  position: absolute;
-  top: 50%;
-  /* left: 50%; */
-  transform: translateY(-50%);
-  padding: 4vw;
-  width: inherit;
-  /* width: 38vw; */
+	position: absolute;
+	top: 50%;
+	/* left: 50%; */
+	transform: translateY(-50%);
+	padding: 4vw;
+	width: inherit;
+	/* width: 38vw; */
 }
 
 #vertical_line {
-  height: 78vh;
-  margin-top: 2vh;
-  border-left: 0.2vh solid #fff;
+	height: 78vh;
+	margin-top: 2vh;
+	border-left: 0.2vh solid #fff;
 }
 
 #right_div {
-  width: 48vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 #right_div #injection {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 47.3vh;
-  width: 32.9vw;
-  margin: 0 auto;
-  margin-top: 30vh;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	/* height: 47.3vh; */
+	width: auto !important;
+	margin: 0 auto;
+	/* margin-top: 30vh; */
 }
 
 #injection {
-  top: 21.7vh;
-  overflow: auto;
-  background: linear-gradient(
-    144.3deg,
-    rgba(255, 255, 255, 0.21) 0%,
-    rgba(255, 255, 255, 0.03) 100%
-  );
-  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.15);
-  backdrop-filter: blur(30px);
-  /* Note: backdrop-filter has minimal browser support */
+	top: 21.7vh;
+	overflow: auto;
+	background: linear-gradient(
+		144.3deg,
+		rgba(255, 255, 255, 0.21) 0%,
+		rgba(255, 255, 255, 0.03) 100%
+	);
+	box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.15);
+	backdrop-filter: blur(30px);
+	/* Note: backdrop-filter has minimal browser support */
 
-  border-radius: 20px;
+	border-radius: 20px;
 }
 
 #injection form,
 #injection div form {
-  font-family: "GothamLight";
-  overflow: auto;
+	/* font-family: "GothamLight"; */
+	overflow: auto;
+	width: 30vw;
+	padding: 0 1rem;
+}
+
+#injection > form {
+	max-height: 70vh;
 }
 
 #injection form[name="user_reg_usrFrm"] {
-  margin-top: 4vh;
+	margin-top: 4vh;
 }
 
 #injection form fieldset {
-  border: 0;
-  padding: 1em;
-  height: unset;
+	border: 0;
+	padding: 1rem 1rem 2rem;
+	height: fit-content;
 }
 
 #injection form[name="user_profile_usrFrm"] fieldset legend {
-  display: none;
+	display: none;
 }
 
 #injection form fieldset legend {
-  margin-bottom: 1em;
-  width: 100%;
+	padding-top: 3rem;
+	margin: 1rem 0 3rem;
+	width: 100%;
 }
 
 #injection form[name="user_reg_usrFrm"] fieldset legend {
-  margin-bottom: 0;
-  padding: 16px;
+	margin-bottom: 1.5rem;
+	padding: 16px;
 
-  width: 396px;
-  height: 48px;
+	width: 396px;
+	height: 48px;
 
-  background: rgba(255, 255, 255, 0.1);
-  /* Overlays / 100 */
+	/* background: rgba(255, 255, 255, 0.1); */
+	/* Overlays / 100 */
 
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  box-sizing: border-box;
-  border-radius: 12px;
+	/* border: 1px solid rgba(255, 255, 255, 0.1);
+	box-sizing: border-box;
+	border-radius: 12px; */
+}
+
+#injection > form > fieldset > table > tbody > tr {
+	display: flex;
+	flex-direction: column;
+}
+
+#injection > form > fieldset > table > tbody > tr > td:nth-child(1) {
+	margin: 1rem 0 0.5rem;
+	font-weight: 600;
+}
+
+#injection > form > fieldset > table > tbody > tr:nth-child(8) {
+	display: initial;
+}
+
+.action-stuff > td {
+	width: 100% !important;
+}
+
+#injection > form > fieldset > table > tbody > tr:nth-child(10) > td,
+#injection > form > fieldset > table > tbody > tr:nth-child(11) > td {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+#injection > form > fieldset > table > tbody > tr:nth-child(11) > td > a {
+	color: #4f8cff;
+	margin: 0;
+	font-weight: 600;
+	font-size: 18px;
+}
+#injection > form > fieldset > table > tbody > tr:nth-child(11) > td > a:hover {
+	text-decoration: underline;
+}
+
+/* captcha text */
+#injection
+	> form
+	> fieldset
+	> table
+	> tbody
+	> tr:nth-child(6)
+	> td:nth-child(1) {
+	width: 100%;
+	font-weight: 600;
 }
 
 form fieldset table,
 form fieldset table tbody {
-  width: 100%;
-  font-size: 1em;
+	width: 100%;
+	font-size: 1em;
 }
 
 #injection
-  form[name="user_profile_usrFrm"]
-  table
-  tr:first-child
-  td:first-child
-  img {
-  margin-bottom: 10px;
+	form[name="user_profile_usrFrm"]
+	table
+	tr:first-child
+	td:first-child
+	img {
+	margin-bottom: 10px;
 }
 
 #injection form[name="user_reg_usrFrm"] table tr td:first-child,
 #injection form[name="user_profile_usrFrm"] table tr td:first-child {
-  width: 45%;
-  margin-right: 3px;
+	width: 45%;
+	margin-right: 3px;
 }
 
 form input {
-  margin-bottom: 1.3em;
-  padding: 10px;
-  width: 100%;
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.1);
-  /* Overlays / 100 */
+	margin-bottom: 1.3em;
+	padding: 10px;
+	width: 100%;
+	border-radius: 10px;
+	background: rgba(255, 255, 255, 0.1);
+	/* Overlays / 100 */
 
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  box-sizing: border-box;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 18px;
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	box-sizing: border-box;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 18px;
 
-  /* Overlays / 400 */
+	/* Overlays / 400 */
 
-  color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.7);
+}
+
+::placeholder {
+	font-size: 14px;
+	line-height: 18px;
+	color: rgba(255, 255, 255, 0.7) !important;
+}
+
+textarea:focus,
+input:focus {
+	outline: none;
+}
+
+#email-label,
+#password-label {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 18px;
+	margin-bottom: 1rem;
+}
+
+#password-label {
+	margin-top: 1.5rem;
 }
 
 form[name="user_reg_usrFrm"] input,
 form[name="user_profile_usrFrm"] input {
-  margin-bottom: 0.9em;
-  font-size: 1em;
-  border-radius: 7px;
-  padding: 5px;
+	margin-bottom: 0.9em;
+	font-size: 1em;
+	border-radius: 7px;
+	padding: 5px;
 }
 
 #injection form input[type="submit"] {
-  border: 0;
-  margin-top: 4vh;
-  width: 148px;
-  height: 36px;
-  margin-right: 2vw;
-  background: rgba(79, 140, 255, 0.9);
-  border-radius: 24px;
-  width: 10.2vw;
-  font-family: Poppins;
-  font-weight: 600;
-  font-size: 16px;
-  align-items: center;
-  text-align: center;
+	border: 0;
+	margin-top: 4vh;
+	width: 148px;
+	/* height: 36px; */
+	padding: 1rem;
+	background: rgba(79, 140, 255, 0.9);
+	border-radius: 24px;
+	width: 10.2vw;
+	font-family: Poppins;
+	font-weight: 600;
+	font-size: 16px;
+	align-items: center;
+	text-align: center;
 
-  color: #ffffff;
+	color: #ffffff;
 }
 
 #injection form[name="user_profile_usrFrm"] input[type="submit"] {
-  font-size: 1.3em;
+	font-size: 1.3em;
 }
 
 #injection form input[type="submit"]:hover {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 #injection form[name="user_reg_usrFrm"] input[type="radio"],
 #injection form[name="user_profile_usrFrm"] input[type="radio"] {
-  padding: 0;
-  width: auto;
+	padding: 0;
+	width: auto;
 }
 
 #injection form[name="user_reg_usrFrm"] select,
 #injection form[name="user_profile_usrFrm"] select {
-  width: 100%;
-  height: 30px;
-  margin-bottom: 1.3em;
-  border-radius: 7px;
-  font-size: 1em;
-  padding: 2px;
-  background: #fff;
+	width: 100%;
+	height: 30px;
+	margin-bottom: 1.3em;
+	border-radius: 7px;
+	font-size: 1em;
+	padding: 2px;
+	background: #fff;
 }
 
 #injection form[name="user_reg_usrFrm"] textarea,
 #injection form[name="user_profile_usrFrm"] textarea {
-  border-radius: 10px;
-  font-size: 1em;
-  margin-bottom: 1.3em;
+	border-radius: 10px;
+	font-size: 1em;
+	margin-bottom: 1.3em;
 }
 
 form[name="user_reg_usrFrm"] img[alt="CAPTCHA"] {
-  width: 100%;
-  border-radius: 4px;
+	width: 100%;
+	border-radius: 4px;
 }
 
 #no_account {
-  display: block;
-  margin-top: 2vh;
+	display: block;
+	margin-top: 2vh;
 }
 
 #sign_up {
-  display: block;
-  margin: 1.6vh 0;
-  font-size: 1.2em;
-  font-weight: bold;
+	display: block;
+	/* margin: 1.6vh 0; */
+	font-size: 1.2em;
+	font-weight: bold;
+}
+
+/* forgot password */
+#pragyan_loginform > fieldset > table > tbody > tr:nth-child(3) > td > a {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 18px;
+	color: #4f8cff;
+}
+
+#pragyan_loginform > fieldset > table > tbody > tr:nth-child(3) > td:hover > a {
+	text-decoration: underline !important;
 }
 
 #injection form a {
-  color: #fff;
-  font-family: "GothamLight";
-  text-decoration: none !important;
+	color: #fff;
+	text-decoration: none !important;
+}
+
+/*Sign up text*/
+#sign_up > a {
+	color: #4f8cff !important;
+}
+
+#sign_up:hover * {
+	text-decoration: underline !important;
 }
 
 td {
-  width: 100%;
+	width: 100%;
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
-  /* position: fixed; */
-  width: 100%;
-  margin-top: 18vh;
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	bottom: 0;
+	/* width: 100%; */
 }
 
 @media screen and (max-width: 786px) {
-  #main_div {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+	#main_div {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+	}
 
-  #left_div,
-  #vertical_line {
-    display: none;
-  }
+	#left_div,
+	#vertical_line {
+		display: none;
+	}
 
-  #right_div {
-    width: 100%;
-  }
+	#right_div {
+		width: 100%;
+	}
 
-  #right_div #injection {
-    width: 60vw;
-    height: 43.3vh;
-    margin: 0 auto;
-  }
+	#right_div #injection {
+		width: 60vw;
+		height: 43.3vh;
+		margin: 0 auto;
+	}
 
-  .footer {
-    margin-top: 32vh;
-  }
+	.footer {
+		margin-top: 32vh;
+	}
 
-  #title {
-    width: 100%;
-    text-align: center;
-    line-height: 1.6;
-    margin-top: 9vh;
-    padding: 0.7vh;
-    height: 20vh;
-    font-size: 2.6em;
-  }
+	#title {
+		width: 100%;
+		text-align: center;
+		line-height: 1.6;
+		margin-top: 9vh;
+		padding: 0.7vh;
+		height: 20vh;
+		font-size: 2.6em;
+	}
 
-  #injection form fieldset {
-    padding: 0;
-  }
+	#injection form fieldset {
+		padding: 0;
+	}
 
-  #injection form fieldset legend {
-    text-align: center;
-    font-size: 32.3368px;
-    line-height: 12px;
-    margin-bottom: 1em;
-  }
+	#injection form fieldset legend {
+		text-align: center;
+		font-size: 32.3368px;
+		line-height: 12px;
+		margin-bottom: 1em;
+	}
 
-  #injection form[name="user_passreset"] fieldset legend {
-    text-align: start;
-  }
+	#injection form[name="user_passreset"] fieldset legend {
+		text-align: start;
+	}
 
-  #injection form[name="user_reg_usrFrm"] fieldset legend {
-    margin-bottom: 1em;
-  }
+	#injection form[name="user_reg_usrFrm"] fieldset legend {
+		margin-bottom: 1em;
+	}
 
-  #injection form input {
-    font-size: 1em;
-    padding: 1rem;
-  }
-  #injection form input[type="submit"] {
-    width: auto;
-  }
+	#injection form input {
+		font-size: 1em;
+		padding: 1rem;
+	}
+	#injection form input[type="submit"] {
+		width: auto;
+	}
 
-  #injection form[name="user_profile_usrFrm"] {
-    margin-top: 5vh;
-  }
+	#injection form[name="user_profile_usrFrm"] {
+		margin-top: 5vh;
+	}
 }
 
 @media screen and (max-width: 578px) {
-  #right_div #injection {
-    width: 75vw;
-  }
+	#right_div #injection {
+		width: 75vw;
+	}
 
-  #title {
-    font-size: 2.2em;
-  }
+	#title {
+		font-size: 2.2em;
+	}
 }
 
 @media screen and (max-width: 432px) {
-  #title {
-    font-size: 2em;
-  }
+	#title {
+		font-size: 2em;
+	}
 
-  #main_div {
-    position: absolute;
-    top: 60%;
-    transform: translateY(-50%);
-  }
+	#main_div {
+		position: absolute;
+		top: 60%;
+		transform: translateY(-50%);
+	}
 
-  #injection form[name="user_reg_usrFrm"],
-  #injection form[name="user_profile_usrFrm"] {
-    margin-top: 5vh;
-  }
+	#injection form[name="user_reg_usrFrm"],
+	#injection form[name="user_profile_usrFrm"] {
+		margin-top: 5vh;
+	}
 }
 
 *::-webkit-scrollbar {
-  width: 0px !important;
-  background: transparent;
+	width: 0px !important;
+	background: transparent;
 }
 
 * {
-  overflow: -moz-scrollbars-none;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-*::-webkit-input-placeholder {
-  color: rgb(54, 53, 53);
-  /* text-transform: uppercase; */
-  font-family: "din";
-}
-
-*:-moz-placeholder {
-  /* Firefox 18- */
-  color: rgb(54, 53, 53);
-  /* text-transform: uppercase; */
-  font-family: "din";
-}
-
-*::-moz-placeholder {
-  /* Firefox 19+ */
-  color: rgb(54, 53, 53);
-  /* text-transform: uppercase; */
-  font-family: "din";
-}
-
-:-ms-input-placeholder {
-  color: rgb(54, 53, 53);
-  /* text-transform: uppercase; */
-  font-family: "din";
+	overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
