--- a/p22event/assets/css/main.css
+++ b/p22event/assets/css/main.css
@@ -46,16 +46,27 @@ body {
 }
 
 .details-container {
+	position: relative;
+	display: flex;
 	flex-direction: column;
 	margin-left: 8%;
-	width: 40%;
-	margin-bottom: 10em;
+	/* width: 40%; */
+	/* margin-bottom: 10em; */
+	margin-top: 1.5rem;
+	height: 80vh;
+}
+
+#top-nav {
+	width: 90vw;
+	display: flex;
+	justify-content: flex-end;
 }
 
 .details-heading-container {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 2em;
+	margin-bottom: 2rem;
+	margin-left: 1rem;
 }
 
 .details-cluster {
@@ -83,19 +94,41 @@ body {
 }
 
 .details-body-wrapper {
-	display: flex;
-	flex-direction: column;
-	max-height: 35vh;
-	overflow-y: scroll;
-	height: 100%;
-	width: 90vw;
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* max-height: 35vh; */
+	overflow-y: auto;
+	/* height: 100%; */
+	width: 45vw;
+	padding: 1rem 2rem;
+	background: rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	transition: all 0.2s;
 }
+
+.details-body-wrapper:hover {
+	background: rgba(0, 0, 0, 0.4);
+	backdrop-filter: blur(10px);
+}
+
 .details-body-wrapper::-webkit-scrollbar {
-	display: none;
+	height: 10px;
+	width: 10px;
+}
+.details-body-wrapper::-webkit-scrollbar-track {
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 20px;
+}
+.details-body-wrapper::-webkit-scrollbar-thumb {
+	background-color: rgba(255, 255, 255, 0.3);
+	border-radius: 20px;
+}
+.details-body-wrapper::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(255, 255, 255, 0.4);
 }
 
 .details-body {
-	width: 40%;
+	width: 90%;
 }
 
 .details-body-item {
@@ -108,6 +141,7 @@ body {
 	margin-bottom: 0.75em;
 	display: flex;
 	align-items: center;
+	position: relative;
 	width: 30%;
 	justify-content: space-between;
 	cursor: pointer;
@@ -116,8 +150,35 @@ body {
 	-webkit-user-select: none;
 }
 
+.details-body-item-head:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 1px;
+	bottom: -1px;
+	left: 0;
+	background-color: #fff;
+	transform-origin: bottom right;
+	transition: transform 0.25s ease-out, height 0.2s;
+	border-radius: 2px;
+}
+
+.details-body-item-head:after:hover {
+	height: 4px;
+}
+
+.details-body-item-head:hover:after {
+	transform: scaleX(1);
+	transform-origin: bottom left;
+	height: 3px;
+}
+
 .details-body-item-content {
 	font-weight: 300;
+	transition: all 0.5s;
+	height: attr(data-height px);
+	opacity: 1;
 }
 
 .details-body-item-head i {
@@ -127,6 +188,7 @@ body {
 
 .hidden {
 	height: 0;
+	opacity: 0;
 	overflow: hidden;
 }
 
