--- a/p22login/assets/css/main.css
+++ b/p22login/assets/css/main.css
@@ -180,23 +180,23 @@ fieldset ol li a {
 
 #injection form fieldset {
 	border: 0;
-	padding: 1rem 1rem 2rem;
+	padding: 1rem 1rem 0.5rem;
 	height: fit-content;
 }
-#injection::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	height: 10px;
 	width: 10px;
 	transform: translate(-15px, 20px);
 }
-#injection::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	background-color: rgba(255, 255, 255, 0.2);
 	border-radius: 20px;
 }
-#injection::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
 	background-color: rgba(255, 255, 255, 0.3);
 	border-radius: 20px;
 }
-#injection::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
 	background-color: rgba(255, 255, 255, 0.4);
 }
 
@@ -235,7 +235,7 @@ fieldset ol li a {
 }
 
 #injection > form > fieldset > table > tbody > tr > td:nth-child(1) {
-	margin: 1rem 0 0.5rem;
+	margin: 0.5rem 0 0.5rem;
 	font-weight: 600;
 }
 
@@ -371,10 +371,6 @@ input:focus {
 	font-size: 16px;
 	line-height: 18px;
 	margin-bottom: 1rem;
-}
-
-#password-label {
-	margin-top: 1.5rem;
 }
 
 form[name="user_reg_usrFrm"] input,
