feat: general info in list page

--- a/common/bottomnav/assets/css/bottom-nav.css
+++ b/common/bottomnav/assets/css/bottom-nav.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 .navbar {
 	backdrop-filter: blur(2px);
@@ -61,7 +61,7 @@
 }
 
 .menu-items.menu-navigation-icons.black * {
-  color: black;
+	color: black;
 }
 
 .menu-items > a.zoom {
